--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Memorizor">
-
+        <activity
+            android:name=".PostActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true" />
