video player revamp

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         <activity
             android:name=".VideoActivity"
             android:exported="true"
-            android:screenOrientation="landscape"/>
+            android:configChanges="orientation|screenSize|layoutDirection"
+            />
         <activity
             android:name=".CourseActivity"
             android:exported="true"
