--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Memorizor">
         <activity
+            android:name=".AccountSettingsActivity"
+            android:exported="true" />
+        <activity
             android:name=".VideoActivity"
-            android:exported="true"
             android:configChanges="orientation|screenSize|layoutDirection"
-            />
+            android:exported="true" />
         <activity
             android:name=".CourseActivity"
-            android:exported="true"
-            />
+            android:exported="true" />
         <activity
             android:name=".AddActivity"
             android:exported="true" />
