--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,11 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
     implementation 'com.google.android.exoplayer:exoplayer:2.7.3'
+    implementation 'com.github.Gkemon:Android-XML-to-PDF-Generator:2.6.2'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
