separated user stats page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Memorizor">
         <activity
+            android:name=".UserStatsActivity"
+            android:exported="true" />
+        <activity
             android:name=".ModeratorUserDetailsActivity"
             android:exported="true" />
         <activity
